[metadata]
name = imagepq
author = ChenZhihui
author-email = 13717910964@163.com
summary = python fork for imagej
license = MIT
description-file = 
    README.rst

home-page = http://imagepq.readthedocs.io/
requires-python = >=3.7
classifier =
    Development Status :: 4 - Beta

[files]
packages = 
    imagepq